infra: add Java 16 input file compilation CI job