@@ -151,6 +151,20 @@ javac15)
   fi
   ;;
 
+javac16)
+  files=($(grep -Rl --include='*.java' ': Compilable with Java16' \
+        src/test/resources-noncompilable || true))
+  if [[  ${#files[@]} -eq 0 ]]; then
+    echo "No Java16 files to process"
+  else
+      mkdir -p target
+      for file in "${files[@]}"
+      do
+        javac --release 16 --enable-preview -d target "${file}"
+      done
+  fi
+  ;;
+
 jdk14-assembly-site)
   mvn -e --no-transfer-progress package -Passembly
   mvn -e --no-transfer-progress site -Pno-validations
